--- a/boost/libs/statechart/example/Camera/Camera.vcproj
+++ b/boost/libs/statechart/example/Camera/Camera.vcproj
@@ -27,7 +27,7 @@
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="1"
 				BufferSecurityCheck="TRUE"
-				DisableLanguageExtensions="TRUE"
+				DisableLanguageExtensions="FALSE"
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
@@ -36,7 +36,8 @@
 				WarningLevel="4"
 				WarnAsError="TRUE"
 				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="4"/>
+				DebugInformationFormat="4"
+				ShowIncludes="FALSE"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -88,7 +89,7 @@
 				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="TRUE"
-				DisableLanguageExtensions="TRUE"
+				DisableLanguageExtensions="FALSE"
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
@@ -97,7 +98,8 @@
 				WarningLevel="4"
 				WarnAsError="TRUE"
 				Detect64BitPortabilityProblems="TRUE"
-				DebugInformationFormat="0"/>
+				DebugInformationFormat="0"
+				ShowIncludes="FALSE"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -185,10 +187,16 @@
 			Name="fsm Header Files"
 			Filter="">
 			<File
-				RelativePath="..\..\..\..\boost\fsm\custom_handler.hpp">
+				RelativePath="..\..\..\..\boost\fsm\custom_reaction.hpp">
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\fsm\event.hpp">
+			</File>
+			<File
+				RelativePath="..\..\..\..\boost\fsm\event_base.hpp">
+			</File>
+			<File
+				RelativePath="..\..\..\..\boost\fsm\result.hpp">
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\fsm\simple_exception_translator.hpp">
@@ -203,7 +211,7 @@
 				RelativePath="..\..\..\..\boost\fsm\state_machine.hpp">
 			</File>
 			<File
-				RelativePath="..\..\..\..\boost\fsm\terminator.hpp">
+				RelativePath="..\..\..\..\boost\fsm\termination.hpp">
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\fsm\transition.hpp">
