Switched to typeid-based implementation
SVN-Revision: 18528

--- a/boost/libs/statechart/example/BitMachine/BitMachine.vcproj
+++ b/boost/libs/statechart/example/BitMachine/BitMachine.vcproj
@@ -148,10 +148,10 @@
 				RelativePath="..\..\..\..\boost\fsm\custom_reaction.hpp">
 			</File>
 			<File
-				RelativePath="..\..\..\..\boost\fsm\event.hpp">
+				RelativePath="..\..\..\..\boost\fsm\deferal.hpp">
 			</File>
 			<File
-				RelativePath="..\..\..\..\boost\fsm\event_base.hpp">
+				RelativePath="..\..\..\..\boost\fsm\event.hpp">
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\fsm\exception_translator.hpp">
