Various small changes and bug fixes
SVN-Revision: 18613

--- a/boost/libs/statechart/example/Handcrafted/Handcrafted.vcproj
+++ b/boost/libs/statechart/example/Handcrafted/Handcrafted.vcproj
@@ -88,8 +88,9 @@
 				StringPooling="TRUE"
 				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="4"
+				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="TRUE"
-				DisableLanguageExtensions="FALSE"
+				DisableLanguageExtensions="TRUE"
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
