--- a/boost/libs/statechart/example/BitMachine/BitMachine.vcproj
+++ b/boost/libs/statechart/example/BitMachine/BitMachine.vcproj
@@ -28,7 +28,7 @@
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="5"
 				BufferSecurityCheck="TRUE"
-				DisableLanguageExtensions="FALSE"
+				DisableLanguageExtensions="TRUE"
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
@@ -88,8 +88,9 @@
 				StringPooling="TRUE"
 				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="4"
+				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="TRUE"
-				DisableLanguageExtensions="FALSE"
+				DisableLanguageExtensions="TRUE"
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
@@ -160,6 +161,9 @@
 				RelativePath="..\..\..\..\boost\fsm\result.hpp">
 			</File>
 			<File
+				RelativePath="..\..\..\..\boost\fsm\rtti_policy.hpp">
+			</File>
+			<File
 				RelativePath="..\..\..\..\boost\fsm\simple_state.hpp">
 			</File>
 			<File
@@ -178,6 +182,9 @@
 		<Filter
 			Name="Header Files"
 			Filter="">
+			<File
+				RelativePath=".\IntegerRttiPolicy.hpp">
+			</File>
 			<File
 				RelativePath=".\UniqueObject.hpp">
 			</File>
