--- a/boost/libs/statechart/example/StopWatch/StopWatch.vcproj
+++ b/boost/libs/statechart/example/StopWatch/StopWatch.vcproj
@@ -27,7 +27,7 @@
 				SmallerTypeCheck="TRUE"
 				RuntimeLibrary="1"
 				BufferSecurityCheck="TRUE"
-				DisableLanguageExtensions="FALSE"
+				DisableLanguageExtensions="TRUE"
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
@@ -87,7 +87,7 @@
 				SmallerTypeCheck="FALSE"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="TRUE"
-				DisableLanguageExtensions="FALSE"
+				DisableLanguageExtensions="TRUE"
 				TreatWChar_tAsBuiltInType="TRUE"
 				ForceConformanceInForLoopScope="TRUE"
 				RuntimeTypeInfo="TRUE"
@@ -156,6 +156,9 @@
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\fsm\result.hpp">
+			</File>
+			<File
+				RelativePath="..\..\..\..\boost\fsm\rtti_policy.hpp">
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\fsm\simple_state.hpp">
