Changed deferal to deferral
SVN-Revision: 18617

--- a/boost/libs/statechart/example/BitMachine/BitMachine.vcproj
+++ b/boost/libs/statechart/example/BitMachine/BitMachine.vcproj
@@ -149,7 +149,7 @@
 				RelativePath="..\..\..\..\boost\fsm\custom_reaction.hpp">
 			</File>
 			<File
-				RelativePath="..\..\..\..\boost\fsm\deferal.hpp">
+				RelativePath="..\..\..\..\boost\fsm\deferral.hpp">
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\fsm\event.hpp">
