--- a/boost/libs/statechart/example/StopWatch/StopWatch.vcproj
+++ b/boost/libs/statechart/example/StopWatch/StopWatch.vcproj
@@ -25,7 +25,7 @@
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="TRUE"
-				RuntimeLibrary="1"
+				RuntimeLibrary="5"
 				BufferSecurityCheck="TRUE"
 				DisableLanguageExtensions="TRUE"
 				TreatWChar_tAsBuiltInType="TRUE"
@@ -85,7 +85,7 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="TRUE"
 				SmallerTypeCheck="FALSE"
-				RuntimeLibrary="0"
+				RuntimeLibrary="4"
 				EnableFunctionLevelLinking="TRUE"
 				DisableLanguageExtensions="TRUE"
 				TreatWChar_tAsBuiltInType="TRUE"
@@ -146,7 +146,7 @@
 				RelativePath="..\..\..\..\boost\fsm\custom_reaction.hpp">
 			</File>
 			<File
-				RelativePath="..\..\..\..\boost\fsm\deferal.hpp">
+				RelativePath="..\..\..\..\boost\fsm\deferral.hpp">
 			</File>
 			<File
 				RelativePath="..\..\..\..\boost\fsm\event.hpp">
