Still working on getting it to build with Wave.  Grrr.
SVN-Revision: 5048

--- a/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
+++ b/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
@@ -1,8 +1,8 @@
 # Invoke STLFilt to clean up what we're getting here.
 CXX = gfilt
 
-CXXFLAGS += -I/usr/local/src/boost_1_33_1
+CXXFLAGS += -I/usr/local/src/boost_1_33_1 -I.
 
-mfront: parse.o
+mfront:  driver/driver.o main.o parser/parse.o
 	$(CXX) -o mfront $^
 
