Added: Some basic work on a configuration system and the mapfile management. Parser: Been modified to start working with g++'s grammer (see simplified_gcc_parse.c for the basis),  but now that the theory's been done, it's time for some serious gruntwork.
SVN-Revision: 5114

--- a/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
+++ b/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
@@ -4,10 +4,11 @@ CXX = gfilt
 CXXFLAGS += -I/usr/local/src/boost -I.
 LDFLAGS += -L/usr/local/lib
 
+OBJECTS =  driver/driver.o main.o parser/generator.o map/map.o
 
-mfront.bin:  driver/driver.o main.o parser/parse.o
+mfront.bin: $(OBJECTS)
 	$(CXX) -o mfront.bin $^ $(LDFLAGS) -lboost_filesystem -lboost_wave
 
 clean:
-	$(RM) driver/driver.o main.o parser/parse.o
+	$(RM) $(OBJECTS)
 
