config.cpp: Configuration for preprocessor well setup now.  Currently hardcoded for OS X 10.4. TODO: Perl or shell script to autoconfigure for host gcc environment.  Not hard. Added:   config.cpp - the config for the preprocessor   experimental/pass_through.cpp - a sandbox for getting the token piping operational, and    for boost::program_options   test.cpp, test_simple.cpp - sandbox for wave.
SVN-Revision: 5125

--- a/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
+++ b/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
@@ -4,10 +4,10 @@ CXX = gfilt
 CXXFLAGS += -I/usr/local/src/boost -I.
 LDFLAGS += -L/usr/local/lib
 
-OBJECTS =  driver/driver.o main.o parser/generator.o map/map.o
+OBJECTS =  driver/config.o driver/driver.o main.o parser/generator.o map/map.o 
 
 mfront.bin: $(OBJECTS)
-	$(CXX) -o mfront.bin $^ $(LDFLAGS) -lboost_filesystem -lboost_wave
+	$(CXX) -o mfront.bin $^ $(LDFLAGS) -lboost_filesystem -lboost_wave -lboost_regex
 
 clean:
 	$(RM) $(OBJECTS)
