The preprocesssor configuration is stable now (at least for my box!).  Back to grammar tomfoolery.
SVN-Revision: 5126

--- a/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
+++ b/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
@@ -1,7 +1,7 @@
 # Invoke STLFilt to clean up what we're getting here.
 CXX = gfilt
 
-CXXFLAGS += -I/usr/local/src/boost -I.
+CXXFLAGS += -g -I/usr/local/src/boost -I.
 LDFLAGS += -L/usr/local/lib
 
 OBJECTS =  driver/config.o driver/driver.o main.o parser/generator.o map/map.o 
@@ -10,5 +10,5 @@ mfront.bin: $(OBJECTS)
 	$(CXX) -o mfront.bin $^ $(LDFLAGS) -lboost_filesystem -lboost_wave -lboost_regex
 
 clean:
-	$(RM) $(OBJECTS)
+	$(RM) $(OBJECTS) mfront.bin
 
