Nothing real here, just testing SVN.
SVN-Revision: 5146

--- a/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
+++ b/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
@@ -9,6 +9,9 @@ OBJECTS =  driver/config.o driver/driver.o main.o parser/generator.o map/map.o
 mfront.bin: $(OBJECTS)
 	$(CXX) -o mfront.bin $^ $(LDFLAGS) -lboost_filesystem -lboost_wave -lboost_regex
 
+parser/generator.o: parser/decl_grammar.h parser/actions.h
+
+
 clean:
 	$(RM) $(OBJECTS) mfront.bin
 
