Initial transformation logic's coming together.  Reads and writes mapfiles correctly. Added parser/actions.cpp: Some of the semantic actions are here now.  Hopefully we can push more into this seperately compiled unit, to reduce the ridiculousness of how much has to be compiled every time we do parser/generator.cpp.
SVN-Revision: 5166

--- a/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
+++ b/SOC/soc-import/boost/soc/2006/modules/trunk/Makefile
@@ -4,7 +4,7 @@ CXX = gfilt
 CXXFLAGS += -g -I/usr/local/src/boost -I.
 LDFLAGS += -L/usr/local/lib
 
-OBJECTS =  driver/config.o driver/output.o driver/driver.o main.o parser/generator.o map/map.o 
+OBJECTS =  driver/config.o driver/output.o driver/driver.o main.o parser/generator.o parser/actions.o map/map.o 
 
 mfront.bin: $(OBJECTS)
 	$(CXX) -o mfront.bin $^ $(LDFLAGS) -lboost_filesystem -lboost_wave -lboost_regex
